# Twinkie_Logger

./: .gitignore  99-twinkie-v2.rules  CMakeLists.txt  README.md
include/: .packet.h.swp  device.h  discover.h  libtwinkie_v2.h  log.h  snooper_packet.h  snooper_stream.h  usbc_pd.h  usbc_tc.h
log_unpacker_python/: data_mesg.py  get_header.py  main.py  twinkie.py  util.py
src/: .device.c.swp  crc32.c  device.c  discover.c  log.c  snooper_stream.c  twinkie_console.c
